src/test/fun-test/semantic/DeclarationStrictConversion6.java.err
Semantic error: type mismatch - expected LONG, got DOUBLE, line 5, pos 20
