src/test/fun-test/semantic/DeclarationStrictConversion6.java
class Main {
    void main() {
        // "сужающее" преобразование, недопустимо
        double foo = 0;
        long bar = foo;
    }
}